--- a/content/post/daily/34.md
+++ b/content/post/daily/34.md
@@ -25,7 +25,7 @@ lodash 是一个以 UMD 模块形式导出的 Lodash 库。
 
 Stars: `26.1k`  License: `Apache-2.0`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/2f809721d74b004cdcfaeb8a8a03f814.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/2f809721d74b004cdcfaeb8a8a03f814.png)
 
 Bevy 是一个用 Rust 构建的简单易用、数据驱动的游戏引擎。它具有以下特点和优势：
 
@@ -40,7 +40,7 @@ Bevy 是一个用 Rust 构建的简单易用、数据驱动的游戏引擎。它
 
 Stars: `15.2k`  License: `GPL-3.0`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/42ba03fac75defa487f644a561c13913.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/42ba03fac75defa487f644a561c13913.png)
 
 Marlin 3D 打印机固件是一个开源项目，它提供了支持 32 位和基于 ARM 的板子以及改进 8 位 AVR 板子的功能。该项目具有以下核心优势：
 
@@ -53,7 +53,7 @@ Marlin 3D 打印机固件是一个开源项目，它提供了支持 32 位和基
 
 Stars: `1.6k`  License: `MIT`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/1a3d97d6c0c031cfb8b14d696cb2bd8f.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/1a3d97d6c0c031cfb8b14d696cb2bd8f.png)
 
 Yazi 是一个用 Rust 编写的终端文件管理器，基于非阻塞异步 I/O。它旨在提供高效、用户友好和可定制的文件管理体验。
 
@@ -68,7 +68,7 @@ Yazi 是一个用 Rust 编写的终端文件管理器，基于非阻塞异步 I/
 
 Stars: `1.1k`  License: `MIT`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/17b22e697fc92a428f409a6854ad9915.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/17b22e697fc92a428f409a6854ad9915.png)
 
 Nue JS 是一个非常小巧 (2.3kb minzipped) 的 JavaScript 库，用于构建 Web 界面。它是即将推出的 Nue 生态系统的核心。与 Vue.js、React.js 或 Svelte 不同，它没有 hooks、effects、props、portals 等特殊抽象概念。只需掌握 HTML、CSS 和 JavaScript 基础知识就可以使用。
 
