--- a/content/post/daily/37.md
+++ b/content/post/daily/37.md
@@ -3,8 +3,7 @@ title: "分布式 12306 购票助手，天南海北随心行 | 开源日报 No.3
 slug: 37
 date: 2023-11-01T16:07:21Z
 description: "这个项目是一个非常有用的 Web 应用安全知识库，它提供了丰富的漏洞描述、利用方法和有效荷载等信息，可以帮助我们提升 Web 安全的能力。"
-image: 'https://svg.903481591.workers.dev'
-# image: "https://osguider.oss-cn-guangzhou.aliyuncs.com/subject/82050fc089bf5525706827584daa084f.png"
+image: 'images/gradient.svg'
 categories: ["开源日报"]
 ---
 
@@ -12,7 +11,7 @@ categories: ["开源日报"]
 
 Stars: `50.7k`  License: `MIT`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/1873cafec15fdb1f6abe4f84368f1973.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/1873cafec15fdb1f6abe4f84368f1973.png)
 
 这个项目是一个 Web 应用安全知识库，提供了漏洞描述、利用方法和多种有效荷载等信息，可以帮助我们增强 Web 安全。
 
@@ -20,7 +19,7 @@ Stars: `50.7k`  License: `MIT`
 
 Stars: `12.1k`  License: `Apache-2.0`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/9d61671f9b85f63a215073940805a122.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/9d61671f9b85f63a215073940805a122.png)
 
 py12306 购票助手是一个分布式、多账号和多任务的购票辅助工具。其主要功能包括：多日期查询余票、自动打码下单、用户状态恢复等。该项目的核心优点和特性有：
 
@@ -35,7 +34,7 @@ py12306 购票助手是一个分布式、多账号和多任务的购票辅助工
 
 Stars: `5.5k`  License: `NOASSERTION`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/7890b50f1f0abe5293f9d94e83bd7840.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/7890b50f1f0abe5293f9d94e83bd7840.png)
 
 这个项目是一个开源的规则引擎、DMN 引擎和复杂事件处理 (CEP) 引擎，适用于 Java™ 和 JVM 平台。
 
@@ -64,7 +63,7 @@ Venom Bot 是一个使用 JavaScript 开发的高性能系统，用于创建 Wha
 
 Stars: `3.9k`  License: `MIT`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/0b9aadc1b7e922a33d8847f8a2693587.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/0b9aadc1b7e922a33d8847f8a2693587.png)
 
 这个项目是一个技术解释，介绍了计算机如何运行程序的整个过程。
 
@@ -75,7 +74,7 @@ Stars: `3.9k`  License: `MIT`
 
 Stars: `3.1k`  License: `Apache-2.0`
 
-![picture|inline](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/15af837a07743c4169d460a0dbd859b6.png)
+![picture](https://picgo-daily.oss-cn-guangzhou.aliyuncs.com/picgo-daily/2023/15af837a07743c4169d460a0dbd859b6.png)
 
 Meshery 是一个自助工程平台，它是开源的、云原生的管理器，可以设计和管理所有基于 Kubernetes 的基础设施和应用程序。其主要功能包括：云原生生命周期管理、多集群 Kubernetes 和云原生配置管理、面向应用程序的上下文感知策略以及性能管理等。该项目具有以下核心优势：
 
